<resources>
    <string name="app_name">School Hub</string>
    <string name="title_activity_home_panel">HomePanel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">School Hub</string>
    <string name="nav_header_subtitle">Welcome to School Hub!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profile">Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search School</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_live_stream">Live Stream</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feeTextHint">---</string>
    <string name="landing_description">Find best school of your choice using various filters on School-hub. Connect with your friends and teachers on School-hub via posts and chats. View live events from schools</string>

</resources>