<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/stats"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_baseline_message"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/nav_live_stream"
            android:icon="@drawable/ic_baseline_live_stream"
            android:title="@string/menu_live_stream" />
    </group>
</menu>